Added corner finding and tests

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <div id="searchAlert" class="alert pull-right" style="display:none"></div>
         </div>
         <div id="transitMode" class="btn-group">
-          <button id="transitBtn" class="btn">Transit</button>
-          <button id="walkBtn" class="btn btn-info">Walk</button>
-          <button id="bikeBtn" class="btn">Bike</button>
-          <button id="driveBtn" class="btn">Drive</button>
+          <button id="TRANSIT" class="btn">Transit</button>
+          <button id="WALKING" class="btn btn-info">Walk</button>
+          <button id="BICYCLING" class="btn">Bike</button>
+          <button id="DRIVING" class="btn">Drive</button>
         </div>
         <p>
           <div id="map_canvas"></div>
