--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-jquery-1.3.1.js"></script>
   <script type="text/javascript" src="js/libs/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC6LAzdvnuFGZ3bIt6zTjGaHsGcA0_6JWM&sensor=false"></script>
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyC6LAzdvnuFGZ3bIt6zTjGaHsGcA0_6JWM&sensor=false"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/rfSpec.js"></script>
